force-app/main/default/objects/Rendez_vous__c/Rendez_vous__c.object-meta.xml
<CustomObject>
    <label>Rendez-vous</label>
    <nameField>
        <label>Rendez-vous</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rendez-vous</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>