force-app/main/default/objects/Rendez_vous__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rendezvous</relationshipLabel>
    <relationshipName>Rendezvous</relationshipName>
    <type>Lookup</type>
</CustomField>