force-app/main/default/objects/Rendez_vous__c/fields/Date_de_rendez_vous__c.field-meta.xml
<CustomField>
    <fullName>Date_de_rendez_vous__c</fullName>
    <label>Date de rendez-vous</label>
    <type>DateTime</type>
</CustomField>