force-app/main/default/objects/Rendez_vous__c/fields/Lieu_de_rendez_vous__c.field-meta.xml
<CustomField>
    <fullName>Lieu_de_rendez_vous__c</fullName>
    <label>Lieu de rendez-vous</label>
    <type>Address</type>
</CustomField>