force-app/main/default/objects/Rendez_vous__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Rendez-vous</relationshipLabel>
    <relationshipName>Rendez_vous</relationshipName>
    <type>Lookup</type>
</CustomField>