force-app/main/default/objects/Rendez_vous__c/fields/Piste__c.field-meta.xml
<CustomField>
    <fullName>Piste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Piste</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Rendez-vous</relationshipLabel>
    <relationshipName>Rendez_vous</relationshipName>
    <type>Lookup</type>
</CustomField>