force-app/main/default/objects/Rendez_vous__c/fields/Rendez_vous_effectue__c.field-meta.xml
<CustomField>
    <fullName>Rendez_vous_effectue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rendez-vous effectué</label>
    <type>Checkbox</type>
</CustomField>