force-app/main/default/objects/Rendez_vous__c/fields/Taux_de_visite__c.field-meta.xml
<CustomField>
    <fullName>Taux_de_visite__c</fullName>
    <formula>IF( ISPICKVAL( Type_de_rendez_vous__c , &apos;Visite&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux de visite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>