force-app/main/default/objects/Rendez_vous__c/fields/Type_de_rendez_vous__c.field-meta.xml
<CustomField>
    <fullName>Type_de_rendez_vous__c</fullName>
    <label>Type de rendez-vous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rendez-vous</fullName>
            </value>
            <value>
                <fullName>Visite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>